[tool.poetry]
name = "streamlit-blank-sharing"
version = "0.1.0"
description = ""
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.77.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
